--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@theme {
+  --color-primary: #1e2126;
+  --color-primary-light: #c2c2c2;
+  --color-primary-dark: #111214;
+  --color-gray: #4a4c56;
+  --color-cation: #d54a4a;
+  --color-theme: #b6ff51;
+  ----default-font-family: "Noto Sans JP", sans-serif;
+}
