--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -8,4 +8,22 @@
   --color-cation: #d54a4a;
   --color-theme: #b6ff51;
   ----default-font-family: "Noto Sans JP", sans-serif;
+
+  --animate-flash-message: flash-message 3s ease-in-out forwards;
+
+  @keyframes flash-message {
+    0% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    10%,
+    90% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    100% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+  }
 }
