--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,16 +4,16 @@
     <ul class="flex items-center justify-center space-x-4">
       <% if user_signed_in? %>
       <li>
-        <%= button_to "ログアウト", "#", class: "inline-block border-2
-        border-theme rounded-full px-5 py-1 text-theme font-semibold" %>
+        <%= link_to "ログアウト", destroy_user_session_path, class: "border-2
+        border-theme rounded-full px-5 py-1 text-theme font-semibold", data: { turbo_method: :delete } %>
       </li>
       <li>
-        <%= link_to "マイページ", "#", class: "inline-block bg-theme
+        <%= link_to "マイページ", "#", class: "bg-theme
         rounded-full px-5 py-1 text-primary font-semibold" %>
       </li>
       <% else %>
         <li>
-          <%= link_to "ログイン", "#", class: "inline-block bg-theme rounded-full
+          <%= link_to "ログイン", "#", class: "bg-theme rounded-full
           px-5 py-1 text-primary font-semibold" %>
         </li>
       <% end %>
