--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
       </li>
       <% else %>
         <li>
-          <%= link_to "ログイン", "#", class: "bg-theme rounded-full
+          <%= link_to "ログイン", new_user_session_path, class: "bg-theme rounded-full
           px-5 py-1 text-primary font-semibold" %>
         </li>
       <% end %>
