fix: レイアウトが真ん中によっていたので上に寄せる

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       >
         <%= render "shared/flash_message" %>
       </div>
-      <main class="flex w-full grow items-center justify-center px-10 py-2">
+      <main class="flex w-full grow items-start justify-center px-10 py-10">
         <%= yield %>
       </main>
       <footer><%= render "shared/footer" %></footer>
