feat: マイページと更新実装

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
         border-theme rounded-full px-5 py-1 text-theme font-semibold", data: { turbo_method: :delete } %>
       </li>
       <li>
-        <%= link_to "マイページ", "#", class: "bg-theme
+        <%= link_to "マイページ", edit_user_registration_path, class: "bg-theme
         rounded-full px-5 py-1 text-primary font-semibold" %>
       </li>
       <% else %>
