feat: 違うPCで作業したので一旦PR

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -5,6 +5,7 @@
   --color-primary-light: #c2c2c2;
   --color-primary-dark: #111214;
   --color-gray: #4a4c56;
+  --color-gray-light: #aaaaaa;
   --color-cation: #d54a4a;
   --color-theme: #b6ff51;
   --default-font-family: "Noto Sans JP", sans-serif;
