--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -1,5 +1,9 @@
-<section class="bg-[#2A2F35] p-3 flex flex-col gap-y-1">
-  <h2 class="font-bold underline text-lg truncate"><%= todo.title %></h2>
-  <p class="text-gray-light truncate"><%= todo.body %></p>
-  <p class="text-gray-light truncate mt-1"><%= todo.created_at.in_time_zone('Tokyo').strftime("%Y/%m/%d") %> <%= todo.user.name %></p>
+<section class="bg-[#2A2F35] p-3">
+  <div class="flex flex-col gap-y-1">
+    <h2 class="truncate text-lg font-bold underline"><%= todo.title %></h2>
+    <p class="text-gray-light truncate"><%= todo.body %></p>
+    <p class="text-gray-light mt-1 truncate">
+      <%= todo.created_at.in_time_zone('Tokyo').strftime("%Y/%m/%d") %> <%= todo.user.name %>
+    </p>
+  </div>
 </section>
