--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,24 +1,27 @@
-<div class="flex flex-col justify-center items-center max-w-2xl w-full gap-y-5">
-  <p class="text-start w-full max-w-md "><%= link_to "←戻る", root_path, class: "text-white underline hover:text-gray transition-all w-full" %></p>
+<div class="flex w-full max-w-2xl flex-col items-center justify-center gap-y-5">
+  <p class="w-full max-w-md text-start">
+    <%= link_to "←戻る", root_path, class: "text-white underline hover:text-gray transition-all w-full" %>
+  </p>
 
-  <article class="bg-primary text-white flex flex-col justify-center items-center max-w-md w-full rounded-2xl">
-    <h1 class="text-theme text-2xl text-center border-b border-gray py-3 w-full">マイページ</h1>
-    <%= form_with model: @user, url: user_registration_path, class: "flex flex-col justify-start items-center w-full px-4 py-4 rounded-xl gap-y-4" do |f| %>
-      <div class="flex flex-col text-start w-full gap-y-2">
-        <%= f.label :name %>
-        <%= field_error_message(resource, :name) %>
-        <%= f.text_field :name, class: "bg-white rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "name name", required: true %>
-      </div>
+  <article class="bg-primary flex w-full max-w-md flex-col items-center justify-center rounded-2xl text-white">
+    <h1 class="text-theme border-gray w-full border-b py-3 text-center text-2xl">マイページ</h1>
+    <%= form_with model: @user, url: user_registration_path, class: "flex flex-col justify-start items-center w-full
+    px-4 py-4 rounded-xl gap-y-4" do |f| %>
+    <div class="flex w-full flex-col gap-y-2 text-start">
+      <%= f.label :name %> <%= field_error_message(resource, :name) %> <%= f.text_field :name, class: "bg-white
+      rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "name name", required: true %>
+    </div>
 
-      <div class="flex flex-col text-start w-full gap-y-2">
-        <%= f.label :email %>
-        <%= field_error_message(resource, :email) %>
-        <%= f.email_field :email, class: "bg-white rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "example@example.com", required: true %>
-      </div>
+    <div class="flex w-full flex-col gap-y-2 text-start">
+      <%= f.label :email %> <%= field_error_message(resource, :email) %> <%= f.email_field :email, class: "bg-white
+      rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "example@example.com",
+      required: true %>
+    </div>
 
-      <div class="flex justify-center items-center">
-        <%= f.submit "更新する", class: "bg-theme text-primary px-4 py-2 rounded-full hover:opacity-50 transition-all cursor-pointer" %>
-      </div>
+    <div class="flex items-center justify-center">
+      <%= f.submit "更新する", class: "bg-theme text-primary px-4 py-2 rounded-full hover:opacity-50 transition-all
+      cursor-pointer" %>
+    </div>
     <% end %>
   </article>
 </div>
