--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,44 +1,54 @@
-<div class="flex flex-col justify-center items-center max-w-2xl w-full gap-y-10">
-  <article class="bg-primary text-white flex flex-col justify-center items-center max-w-md w-full rounded-2xl">
-    <h1 class="text-theme text-2xl text-center border-b border-gray py-3 w-full">ユーザー新規登録</h1>
-    <%= form_with model: @user, url: user_registration_path, class: "flex flex-col justify-start items-center w-full px-4 py-4 rounded-xl gap-y-4" do |f| %>
-      <div class="flex flex-col text-start w-full gap-y-2">
-        <div>
-          <%= f.label :name %><span class="text-red-400">*</span>
-        </div>
-        <%= field_error_message(resource, :name) %>
-        <%= f.text_field :name, class: "bg-white rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "example name", required: true %>
+<div class="flex w-full max-w-2xl flex-col items-center justify-center gap-y-10">
+  <article class="bg-primary flex w-full max-w-md flex-col items-center justify-center rounded-2xl text-white">
+    <h1 class="text-theme border-gray w-full border-b py-3 text-center text-2xl">ユーザー新規登録</h1>
+    <%= form_with model: @user, url: user_registration_path, class: "flex flex-col justify-start items-center w-full
+    px-4 py-4 rounded-xl gap-y-4" do |f| %>
+    <div class="flex w-full flex-col gap-y-2 text-start">
+      <div>
+        <%= f.label :name %>
+        <span class="text-red-400">*</span>
       </div>
+      <%= field_error_message(resource, :name) %> <%= f.text_field :name, class: "bg-white rounded-lg p-2 text-gray
+      outline-none focus:ring-2 focus:ring-theme", placeholder: "example name", required: true %>
+    </div>
 
-      <div class="flex flex-col text-start w-full gap-y-2">
-        <div>
-          <%= f.label :email %><span class="text-red-400">*</span>
-        </div>
-        <%= field_error_message(resource, :email) %>
-        <%= f.email_field :email, class: "bg-white rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "example@example.com", required: true %>
+    <div class="flex w-full flex-col gap-y-2 text-start">
+      <div>
+        <%= f.label :email %>
+        <span class="text-red-400">*</span>
       </div>
+      <%= field_error_message(resource, :email) %> <%= f.email_field :email, class: "bg-white rounded-lg p-2 text-gray
+      outline-none focus:ring-2 focus:ring-theme", placeholder: "example@example.com", required: true %>
+    </div>
 
-      <div class="flex flex-col text-start w-full gap-y-2">
-        <div>
-          <%= f.label :password %><span class="text-red-400">*</span>
-        </div>
-        <%= field_error_message(resource, :password) %>
-        <%= f.password_field :password, class: "bg-white rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "6文字以上", required: true %>
+    <div class="flex w-full flex-col gap-y-2 text-start">
+      <div>
+        <%= f.label :password %>
+        <span class="text-red-400">*</span>
       </div>
+      <%= field_error_message(resource, :password) %> <%= f.password_field :password, class: "bg-white rounded-lg p-2
+      text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "6文字以上", required: true %>
+    </div>
 
-      <div class="flex flex-col text-start w-full gap-y-2">
-        <div>
-          <%= f.label :password_confirmation %><span class="text-red-400">*</span>
-        </div>
-        <%= field_error_message(resource, :password_confirmation) %>
-        <%= f.password_field :password_confirmation, class: "bg-white rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "確認用パスワード", required: true %>
+    <div class="flex w-full flex-col gap-y-2 text-start">
+      <div>
+        <%= f.label :password_confirmation %>
+        <span class="text-red-400">*</span>
       </div>
+      <%= field_error_message(resource, :password_confirmation) %> <%= f.password_field :password_confirmation, class:
+      "bg-white rounded-lg p-2 text-gray outline-none focus:ring-2 focus:ring-theme", placeholder: "確認用パスワード",
+      required: true %>
+    </div>
 
-      <div class="flex justify-center items-center">
-        <%= f.submit "登録する", class: "bg-theme text-primary px-4 py-2 rounded-full hover:opacity-50 transition-all cursor-pointer" %>
-      </div>
+    <div class="flex items-center justify-center">
+      <%= f.submit "登録する", class: "bg-theme text-primary px-4 py-2 rounded-full hover:opacity-50 transition-all
+      cursor-pointer" %>
+    </div>
     <% end %>
   </article>
 
-  <p><%= link_to "登録済みの場合はこちら", new_user_session_path, class: "text-white underline hover:text-gray transition-all" %></p>
+  <p>
+    <%= link_to "登録済みの場合はこちら", new_user_session_path, class: "text-white underline hover:text-gray
+    transition-all" %>
+  </p>
 </div>
