--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -1,9 +1,12 @@
-<section class="bg-[#2A2F35] p-3">
-  <div class="flex flex-col gap-y-1">
+<section class="flex w-[300px] bg-[#2A2F35] p-3">
+  <div class="flex w-5/6 flex-col gap-y-1">
     <h2 class="truncate text-lg font-bold underline"><%= link_to todo.title, todo_path(todo) %></h2>
     <p class="text-gray-light truncate"><%= todo.body %></p>
     <p class="text-gray-light mt-1 truncate">
       <%= todo.created_at.in_time_zone('Tokyo').strftime("%Y/%m/%d") %> <%= todo.user.name %>
     </p>
+  </div>
+  <div class="flex w-1/6 flex-col items-center justify-center gap-y-2">
+    <%= link_to "▲", "#", class: "text-theme" %> <%= link_to "▼", "#", class: "text-theme" %>
   </div>
 </section>
